@@ -80,6 +80,7 @@ namespace Chummer
         private bool _blnFree;
         private readonly List<Image> _lstMugshots = new List<Image>();
         private int _intMainMugshotIndex = -1;
+        private int _intKarmaMinimum = 2;
 
         public event PropertyChangedEventHandler PropertyChanged;
 
@@ -378,6 +379,10 @@ namespace Chummer
                     intReturn += 1;
                 if (Blackmail)
                     intReturn += 2;
+                intReturn +=
+                    ImprovementManager.ValueOf(_objCharacter, Improvement.ImprovementType.ContactKarmaDiscount);
+                intReturn = Math.Max(intReturn,
+                    _intKarmaMinimum + ImprovementManager.ValueOf(_objCharacter, Improvement.ImprovementType.ContactKarmaMinimum));
                 return intReturn;
             }
         }
